--- a/EcoTrack-Web/package.json
+++ b/EcoTrack-Web/package.json
@@ -14,9 +14,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@mui/x-charts": "^7.28.0",
+    "axios": "^1.8.4",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
