--- a/EcoTrack-Web/package.json
+++ b/EcoTrack-Web/package.json
@@ -13,13 +13,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
-    "@mui/material": "^6.4.5",
+    "@mui/material": "^6.4.11",
     "@mui/x-charts": "^7.28.0",
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "framer-motion": "^12.4.4",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
