--- a/EcoTrack-Web/package.json
+++ b/EcoTrack-Web/package.json
@@ -15,9 +15,12 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.11",
     "@mui/x-charts": "^7.28.0",
+    "@mui/x-date-pickers": "^8.3.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.4.4",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
